[package]
name = "pileup_region"
version = "0.1.0"
authors = ["Josh Weinstock <josh.weinsotck@emory.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-htslib = "0.32.0"
log = "0.4"
env_logger ="0.7.1"
csv = "1.1"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }

